SVEA-108: address alignment fix

--- a/src/skin/frontend/base/default/svea/sass/partials/_streamcheckout.scss
+++ b/src/skin/frontend/base/default/svea/sass/partials/_streamcheckout.scss
@@ -33,6 +33,15 @@
                     }
                 }
             }
+            .address-disclaimer {
+                clear:both;
+                margin:10px 0;
+            }
+            .sveaShowAddresses {
+                label {
+                    font-weight: bold;
+                }
+            }
         }
     }
 
